# rust-gpt

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  schema.sql
src/: main.rs  models.rs  routes.rs
