[package]
name = "rust-gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-chrono-0_4"] }
serde = { version = "1", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
dotenvy = "0.15"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

