[package]
name = "rust-gpt"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1.48", features = ["full", "rt-multi-thread"] }
hyper = { version = "1.7", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1"] }
http-body-util = "0.1"
bytes = "1.10"
socket2 = "0.5"
libc = "0.2"
num_cpus = "1.17"
anyhow = "1"
once_cell = "1.19"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8"] }
deadpool-postgres = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"   # добавлено

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
