[package]
name = "rust-gpt-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8"] }
dotenvy = "0.15"
sysinfo = "0.30"
anyhow = "1"
num_cpus = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
